<resources>
    <string name="app_name">SmartLab</string>

    <string name="skip">Skip</string>
    <string name="complete">Complete</string>
    <string name="confirm">Confirm</string>
    <string name="analyzes">Analyzes</string>
    <string name="text_onboard_1">Express collection and receipt of samples</string>
    <string name="notifications">Notifications</string>
    <string name="text_onboard_2">You will learn about the results quickly</string>
    <string name="monitoring">Monitoring</string>
    <string name="text_onboard_3">Our doctors are always monitoring\nyour health indicators</string>

    <string name="search">.     Search</string>
    <string name="text_home_news">Promotions and news</string>
    <string name="doctors">Doctors</string>
    <string name="text_item_button_add">Add</string>
    <string name="text_item_button_remove">Remove</string>
    <string name="text_item_button_sign_up">Sign Up</string>

    <string name="text_analyzes_catalog">Catalog of analyses</string>
    <string name="text_analyzes_catalog_all">All categories of analyses</string>
    <string name="text_doctors_catalog">Specialty catalog</string>
    <string name="text_specialization_catalog_all">All specialties</string>

    <string name="text_profile_medical_card">Medical card</string>
    <string name="text_profile_analysis_results">Analysis results</string>
    <string name="text_profile_make_an_appointment">Appointments with doctors</string>
    <string name="text_profile_delivery_addresses">Delivery addresses</string>

    <string name="record">Record</string>
    <string name="basket">Basket</string>
    <string name="profile">Profile</string>
    <string name="your_notes">Your notes</string>
    <string name="your_notifications">Notifications</string>

    <string name="records_text_1">You have an appointment with a doctor</string>
    <string name="records_text_2">FIO: </string>
    <string name="records_text_3">Specialization: </string>
    <string name="records_text_4">Date and time: </string>

    <string name="text_doctors_description_1">Make an appointment</string>
    <string name="text_doctors_description_2">Experience</string>
    <string name="text_doctors_description_3">rating</string>
    <string name="text_doctors_description_4">About me</string>
    <string name="text_doctors_description_5">Date and time</string>
    <string name="text_doctors_description_date_1">Select a date</string>
    <string name="text_doctors_description_date_2">Choose a time</string>

    <string name="recover">Password Recovery</string>
    <string name="updating">Updating mail</string>
    <string name="welcome">Welcome!</string>
    <string name="text_login_1">Log in to use the app\'s features</string>
    <string name="email">E-mail</string>
    <string name="phone">Telephone</string>
    <string name="email2">example@mail.ru</string>
    <string name="password">Password</string>
    <string name="password2">password</string>
    <string name="password_forgot">Forgot your password?</string>
    <string name="no_account">No account?</string>
    <string name="yes_account">Do you have an account?</string>
    <string name="text_further">Further</string>
    <string name="password_repeat">Repeat password</string>
    <string name="password_repeat_2">repeat password</string>
    <string name="text_registration_1">Register to use the app\'s features</string>

    <string name="create_pin">Create a PIN code</string>
    <string name="create_pin_text">To protect your personal data</string>

    <string name="input_pin">Enter the PIN code</string>
    <string name="input_updating_email">Enter a new email address</string>

    <string name="text_email_code_1">Enter the code from the E-mail</string>
    <string name="text_email_code_2">You can send the code again \n it will be in</string>
    <string name="text_email_code_22">seconds</string>
    <string name="text_email_code_3">Send the code again</string>

    <string name="text_validate_1">Email is required</string>
    <string name="text_validate_2">Please enter a valid email</string>
    <string name="text_validate_3">Password is required</string>
    <string name="text_validate_4">Password must be at least 6 characters</string>
    <string name="text_validate_5">User not found. Please check your credentials</string>
    <string name="text_validate_6">The user is already registered</string>

    <string name="text_validate1">Email is required</string>
    <string name="text_validate2">Please enter a valid email</string>
    <string name="text_validate3">Password is required</string>
    <string name="text_validate4">Password must be at least 8 characters</string>
    <string name="text_validate5">Password must contain at least one uppercase letter</string>
    <string name="text_validate6">Password must contain at least one lowercase letter</string>
    <string name="text_validate7">Password must contain at least one number</string>
    <string name="text_validate8">Please confirm your password</string>
    <string name="text_validate9">Passwords don\'t match</string>
    <string name="text_validate10">Enter a name</string>
    <string name="text_validate11">Enter your last name</string>
    <string name="text_validate12">Enter your date of birth</string>

    <string name="text_pin_wrong">Incorrect Pin. Try again</string>
    <string name="text_pin_dont">PINs don\'t match. Try again</string>
    <string name="text_pin_сonfirm">Confirm your PIN</string>

    <string-array name="gender_options">
        <item>man</item>
        <item>woman</item>
    </string-array>
    <string name="gender_man">man</string>

    <string name="profile_card_1">Medical card</string>
    <string name="profile_card_2">Personal information</string>
    <string name="profile_card_3">Recovery</string>
    <string name="profile_card_name">Patient\'s card</string>
    <string name="profile_card_name_1">Name</string>
    <string name="profile_card_name_2">Middle name</string>
    <string name="profile_card_name_3">Surname</string>
    <string name="profile_card_name_4">Date of birth</string>
    <string name="profile_card_name_5">Gender</string>
    <string name="profile_card_name_6_button">Save</string>
    <string name="card_name_save">Creating a patient\ncard</string>
    <string name="card_text_1">You will not be able to order tests without\na patient\'s card.</string>
    <string name="card_text_2">The results of the tests of you and your loved ones will be stored in the patient\'s records.</string>

    <string name="categories">Category</string>
    <string name="not_specified">not specified</string>

    <string name="text_filtering">Filtering</string>
    <string name="text_price">Price, rub.</string>
    <string name="text_term">Period of execution</string>
    <string name="text_categories">Categories</string>
    <string name="text_rating">Rating</string>

    <string name="text_from">From</string>
    <string name="text_before">Before</string>

    <string name="text_button_off">Reset</string>
    <string name="text_button_apply">Apply</string>

    <string name="text_description">Description</string>
    <string name="text_preparation">Preparation</string>
    <string name="text_result">Results via:</string>
    <string name="text_biomaterial">Biomaterial:</string>
    <string name="text_add">Add for</string>

    <string name="text_ru_en">en</string>
    <string name="text_today">Today</string>
    <string name="text_description_time_1">Select an appointment time</string>
    <string name="text_description_time_2">Record Confirmation</string>
    <string name="text_description_time_3">Are you sure you want to sign up for</string>
    <string name="text_in">in</string>
    <string name="text_yes">Yes</string>
    <string name="text_description_time_6">recorded</string>
    <string name="text_no">No</string>

    <string name="text_sum">The amount</string>
    <string name="text_buy_button">Go to checkout</string>
    <string name="text_basket_button">Into a basket</string>

    <string name="text_delete_1">Confirmation of deletion</string>
    <string name="text_delete_2">Are you sure you want to empty the entire trash?</string>
    <string name="text_delete_3">Are you sure you want to delete it?</string>

    <string name="text_filter_1">price from</string>
    <string name="text_filter_2">price up to</string>
    <string name="text_filter_3">rating from</string>
    <string name="text_filter_3_3">period of execution:</string>
    <string name="text_filter_4">specialization</string>
    <string name="text_filter_4_4">category</string>

    <string name="text_filter_5">Filtering</string>
    <string name="text_filter_6">Filter: </string>

    <string name="text_rub">rub.</string>

    <string name="text_buy_1">Making an order</string>
    <string name="text_buy_2">Address *</string>
    <string name="text_buy_1_button">Enter your address</string>
    <string name="text_buy_3">Date and time*</string>
    <string name="text_buy_2_button">Select the date and time</string>
    <string name="text_buy_4">Telephone *</string>
    <string name="text_buy_2_edit">Enter your phone number</string>
    <string name="text_buy_5">Comment</string>
    <string name="text_buy_6">You can leave your suggestions</string>
    <string name="text_buy_3_button">To order</string>

    <string name="text_address_1">Your address</string>
    <string name="text_address_2">City(region)</string>
    <string name="text_address_3">Street</string>
    <string name="text_address_4">Apartment</string>
    <string name="text_address_5">Entrance</string>
    <string name="text_address_6">Floor</string>

    <string name="text_address_1_edit">Enter the city(region)</string>
    <string name="text_address_2_edit">Enter your street</string>
    <string name="text_address_3_edit">Number</string>

    <string name="text_address_3_text">Save this address?</string>
    <string name="text_address_3_button">Confirm</string>

    <string name="text_buy1">We are contacting the bank...</string>
    <string name="text_buy2">We make the payment...</string>
    <string name="text_buy3">Payment</string>
    <string name="text_buy4">Your order has been successfully paid for!</string>

    <string name="text_buy_4_1">Purchase receipt</string>
    <string name="text_buy_4_2">Go main page</string>


    <string name="text_validate_error">Invalid code</string>
    <string name="new_password">Enter a new password</string>

    <string name="text_notification_1">Have you made an appointment</string>
    <string name="text_notification_1_1">You have placed an order</string>
    <string name="text_notification_2">Specialization:</string>
    <string name="text_notification_2_1">Analyzes:</string>
    <string name="text_notification_3">Doctor:</string>
    <string name="text_notification_4">Date and time:</string>
    <string name="text_notification_5">For the amount of:</string>

    <string name="text_buy_validate_1">Enter the address</string>
    <string name="text_buy_validate_2">Select the date and time</string>
    <string name="text_buy_validate_3">Enter the correct phone number</string>

    <string name="text_not_notification">There are no notifications</string>
    <string name="text_not_feature">This feature is currently unavailable.\nThe feature will be available in the next updates!</string>
</resources>