<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="34dp"
    android:background="#FFFFFF">

    <TextView
        android:id="@+id/text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:drawablePadding="20dp"
        android:drawableLeft="@drawable/emojies_login"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_login_1"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        android:textColor="@color/black"
        android:layout_marginBottom="32dp"
        app:layout_constraintTop_toBottomOf="@+id/text1"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/text3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/gray"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@+id/text2"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email2"
        android:inputType="textEmailAddress"
        android:background="@drawable/edittext_background"
        android:padding="12dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/text3"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/text4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/gray"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/emailEditText"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password2"
        android:layout_marginTop="8dp"
        android:inputType="textPassword"
        android:background="@drawable/edittext_background"
        android:padding="12dp"
        app:layout_constraintTop_toBottomOf="@+id/text4"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/forgotPasswordText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password_forgot"
        android:textSize="14sp"
        android:textColor="@color/gray_text"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/passwordEditText"
        app:layout_constraintRight_toRightOf="parent"/>

    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/text_further"
        android:textColor="#FFFFFF"
        android:background="@drawable/blue_button_background_off"
        android:textSize="20sp"
        android:padding="12dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/forgotPasswordText"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>