<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/card_name_save"
                    android:textSize="30sp"
                    android:layout_marginTop="20dp"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:gravity="center|left"
                    android:layout_marginBottom="16dp"/>
                <Button
                    android:id="@+id/buttonSkip"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:text="@string/skip"
                    android:gravity="center|right"
                    android:textSize="16sp"
                    android:textColor="@color/blue_button"
                    style="@style/Widget.AppCompat.Button.Borderless" />

            </LinearLayout>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/card_text_1"
                android:textSize="16sp"
                android:textColor="@color/gray"
                android:layout_marginBottom="10dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/card_text_2"
                android:textSize="16sp"
                android:textColor="@color/gray"
                android:layout_marginBottom="10dp"/>


            <EditText
                android:id="@+id/firstNameEditText"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:padding="10dp"
                android:layout_marginTop="20dp"
                android:hint="@string/profile_card_name_1"
                android:background="@drawable/edittext_background"
                android:textSize="18sp"
                android:layout_marginBottom="16dp"/>


            <EditText
                android:id="@+id/middleNameEditText"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:padding="10dp"
                android:hint="@string/profile_card_name_2"
                android:background="@drawable/edittext_background"
                android:textSize="18sp"
                android:layout_marginBottom="16dp"/>


            <EditText
                android:id="@+id/lastNameEditText"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:padding="10dp"
                android:hint="@string/profile_card_name_3"
                android:background="@drawable/edittext_background"
                android:textSize="18sp"
                android:layout_marginBottom="16dp"/>


            <EditText
                android:id="@+id/birthDateEditText"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:padding="10dp"
                android:hint="@string/profile_card_name_4"
                android:background="@drawable/edittext_background"
                android:textSize="18sp"
                android:layout_marginBottom="16dp"/>


            <Spinner
                android:id="@+id/genderSpinner"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:padding="10dp"
                android:scrollbarAlwaysDrawVerticalTrack="true"
                android:background="@drawable/edittext_background"
                android:layout_marginBottom="24dp"/>

            <Button
                android:id="@+id/saveButton"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/profile_card_name_6_button"
                android:textSize="18sp"
                android:layout_marginTop="30dp"
                style="@style/BlueButtonOff"
                android:textColor="@color/white"
                android:padding="12dp"/>

        </LinearLayout>
    </ScrollView>
