<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:padding="24dp">



    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_buy3"
        android:textSize="30sp"
        android:layout_marginTop="60dp"
        android:textColor="@color/black"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:textStyle="bold"/>

    <ImageView
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_centerInParent="true"
        android:src="@drawable/colb_onboard_1"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/image"
        android:text="@string/text_buy4"
        android:textSize="20sp"
        android:textColor="@color/green_onboard"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginBottom="40dp"/>

    <Button
        android:id="@+id/buttonReceipt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/buttonHome"
        android:layout_marginBottom="16dp"
        android:text="@string/text_buy_4_1"
        style="@style/BlueButtonStyleRadiusDelete"
        android:textColor="@color/blue_button"
        android:textSize="20sp"/>

    <Button
        android:id="@+id/buttonHome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/text_buy_4_2"
        style="@style/BlueButtonStyle"
        android:textColor="@color/white"
        android:textSize="20sp"/>

</RelativeLayout>