<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/white"
        android:elevation="8dp"
        android:padding="20dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_filtering"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginBottom="16dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_price"
            android:textColor="@color/gray"
            android:textSize="16sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="8dp"
                app:counterEnabled="true"
                app:counterMaxLength="6">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/fromEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/text_from"
                    android:textColorHint="@color/gray"
                    style="@style/SearchEditText"
                    android:inputType="number"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:counterEnabled="true"
                app:counterMaxLength="6">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/beforeEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/text_before"
                    android:textColorHint="@color/gray"
                    style="@style/SearchEditText"
                    android:inputType="number"/>
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_rating"
            android:textSize="16sp"
            android:layout_marginBottom="10dp"
            android:textColor="@color/gray"
            android:layout_marginTop="16dp"/>

            <RatingBar
                android:id="@+id/ratingDoctors"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:numStars="5"
                android:stepSize="1"
                android:rating="0"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_categories"
            android:textSize="16sp"
            android:layout_marginBottom="8dp"
            android:textColor="@color/gray"
            android:layout_marginTop="16dp"/>

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/categoriesChipGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:singleSelection="false"
            app:selectionRequired="false">

        </com.google.android.material.chip.ChipGroup>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="24dp">

            <Button
                android:id="@+id/resetButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/text_button_off"
                android:layout_marginEnd="8dp"
                style="@style/BlueButtonStyleRadiusDelete"/>

            <Button
                android:id="@+id/applyButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/text_button_apply"
                style="@style/BlueButtonStyle"/>
        </LinearLayout>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>